Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjNumber.quorum
class Main
    action Main
        Integer int
        int = cast(Integer, 7.5)
    end
end